...
        lbFooter.textAlignment = .center
        lbContent.lineBreakMode = .byWordWrapping
        lbContent.numberOfLines = 0
        lbFooter.translatesAutoresizingMaskIntoConstraints = false
        
       
        tfStringMath.attributedPlaceholder = NSAttributedString(string: "Escribe tu ecuacion : 10+1", attributes: [NSAttributedString.Key.foregroundColor: UIColor.gray ])
        tfStringMath.clipsToBounds = false
        tfStringMath.textAlignment = .center
        tfStringMath.font = UIFont.systemFont(ofSize: 16)
        tfStringMath.keyboardAppearance = UIKeyboardAppearance.dark
        tfStringMath.textColor = .white
        tfStringMath.keyboardType = UIKeyboardType.alphabet
        tfStringMath.translatesAutoresizingMaskIntoConstraints = false
        
        btCalculate.translatesAutoresizingMaskIntoConstraints = false
        btCalculate.setTitle("Calcular ¿ Estas Seguro ?", for: .normal)
        btCalculate.backgroundColor = #colorLiteral(red: 0.9254902005, green: 0.2352941185, blue: 0.1019607857, alpha: 1)
        btCalculate.layer.cornerRadius = 5
        btCalculate.clipsToBounds = true
        btCalculate.titleLabel?.font = UIFont.boldSystemFont(ofSize: 16)
        btCalculate.addTarget(self, action: #selector(calculate), for: .touchDown)
        btCalculate.isUserInteractionEnabled = true
...
